--- a/storeKeeperV2.0/Base.lproj/Main.storyboard
+++ b/storeKeeperV2.0/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellManage" rowHeight="150" id="3v4-1h-00Y">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellManage" rowHeight="150" id="3v4-1h-00Y" customClass="ManageTableViewCell" customModule="storeKeeperV2_0" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3v4-1h-00Y" id="u0w-f5-vdK">
@@ -131,6 +131,14 @@
                                         <constraint firstItem="5Wx-gi-eS3" firstAttribute="leading" secondItem="u0w-f5-vdK" secondAttribute="leading" constant="8" id="aHu-ES-VSH"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="acceptButton" destination="LQX-5k-Eju" id="Eiu-6N-mcD"/>
+                                    <outlet property="countLaabel" destination="ia3-N1-tQr" id="ctY-f9-ba9"/>
+                                    <outlet property="descriptionLabel" destination="I5N-zY-I83" id="zXR-3y-O9P"/>
+                                    <outlet property="giveOutButton" destination="5Hn-xl-oXA" id="zXJ-6H-YBW"/>
+                                    <outlet property="titleLabel" destination="bnP-aQ-6lX" id="HP5-I9-kMi"/>
+                                    <outlet property="typeLabel" destination="iYa-jR-iGA" id="ehT-Cy-qZ1"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
