--- a/storeKeeperV2.0/Base.lproj/Main.storyboard
+++ b/storeKeeperV2.0/Base.lproj/Main.storyboard
@@ -9,6 +9,35 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="9mG-te-wvH">
+            <objects>
+                <viewController id="gOK-sM-BWb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lLj-OJ-HKI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aI4-1O-dfK">
+                                <rect key="frame" x="87" y="176" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Отвертка" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IA-f6-XSK">
+                                <rect key="frame" x="154" y="333" width="107" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ipB-D1-Nvz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="T7S-py-ip1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vb6-Pt-Iaq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1542" y="-595"/>
+        </scene>
         <!--Мой Склад-->
         <scene sceneID="XBU-zB-3Jq">
             <objects>
@@ -41,6 +70,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="gOK-sM-BWb" kind="show" trigger="accessoryAction" id="sJo-Ok-GXp"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -52,7 +84,7 @@
                         <barButtonItem key="backBarButtonItem" title="Склад" id="D0S-ae-Weo"/>
                         <barButtonItem key="leftBarButtonItem" title="Item" image="list.dash" catalog="system" id="05J-m6-0xB">
                             <connections>
-                                <action selector="sortButtonPressed:" destination="atZ-j8-dfV" id="0S0-pk-I6x"/>
+                                <action selector="sortButtonPressed:" destination="ca4-Gz-C7W" id="bJK-rU-HyM"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Управлять" image="tray" catalog="system" id="tqs-YZ-Wjb">
@@ -66,6 +98,7 @@
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8rJ-3q-6rk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="ca4-Gz-C7W" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="774" y="112"/>
         </scene>
@@ -77,9 +110,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="hKa-DY-SIQ">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellManage" rowHeight="150" id="3v4-1h-00Y" customClass="ManageTableViewCell" customModule="storeKeeperV2_0" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
+                                <rect key="frame" x="0.0" y="72" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3v4-1h-00Y" id="u0w-f5-vdK">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
@@ -92,7 +130,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="398" height="40"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="QvM-g2-hdW">
-                                                            <rect key="frame" x="0.0" y="0.0" width="110.5" height="40"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="398" height="40"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Отвертка" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnP-aQ-6lX">
                                                                     <rect key="frame" x="0.0" y="0.0" width="86.5" height="24"/>
@@ -108,14 +146,6 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jrs-b4-c7h">
-                                                            <rect key="frame" x="378.5" y="0.0" width="19.5" height="22"/>
-                                                            <color key="tintColor" systemColor="systemRedColor"/>
-                                                            <state key="normal" image="trash" catalog="system"/>
-                                                            <connections>
-                                                                <action selector="deleteButtonPressed:" destination="3v4-1h-00Y" eventType="touchUpInside" id="Z7o-Zh-qWG"/>
-                                                            </connections>
-                                                        </button>
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Доступно 2/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ia3-N1-tQr">
@@ -169,7 +199,6 @@
                                 <connections>
                                     <outlet property="acceptButton" destination="LQX-5k-Eju" id="Eiu-6N-mcD"/>
                                     <outlet property="countLaabel" destination="ia3-N1-tQr" id="ctY-f9-ba9"/>
-                                    <outlet property="deleteButton" destination="jrs-b4-c7h" id="ngF-MJ-r5j"/>
                                     <outlet property="descriptionLabel" destination="I5N-zY-I83" id="zXR-3y-O9P"/>
                                     <outlet property="giveOutButton" destination="5Hn-xl-oXA" id="zXJ-6H-YBW"/>
                                     <outlet property="titleLabel" destination="bnP-aQ-6lX" id="HP5-I9-kMi"/>
@@ -184,16 +213,24 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Управление Складом" largeTitleDisplayMode="never" id="xCE-67-uXe">
                         <barButtonItem key="backBarButtonItem" title="Склад" id="cwl-Bc-CQ4"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="FDz-Ae-zI1">
-                            <connections>
-                                <segue destination="r0O-2H-NJI" kind="presentation" modalPresentationStyle="fullScreen" id="C3b-cU-ygr"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="FDz-Ae-zI1">
+                                <connections>
+                                    <segue destination="r0O-2H-NJI" kind="presentation" modalPresentationStyle="fullScreen" id="C3b-cU-ygr"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="house" catalog="system" id="mcW-qS-gtP">
+                                <connections>
+                                    <segue destination="aU1-B8-LH0" kind="unwind" unwindAction="saveusWithSegue:" id="oi1-m2-dr5"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3De-jl-Qg8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="aU1-B8-LH0" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1613.0434782608697" y="111.83035714285714"/>
+            <point key="canvasLocation" x="1577" y="112"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="D23-4j-6T6">
@@ -210,10 +247,10 @@
             </objects>
             <point key="canvasLocation" x="2403" y="112"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Navigation View Controller-->
         <scene sceneID="nPQ-EI-iqz">
             <objects>
-                <navigationController id="OpW-Zy-iur" sceneMemberID="viewController">
+                <navigationController id="OpW-Zy-iur" customClass="NavigationViewController" customModule="storeKeeperV2_0" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Gsn-1z-hk4">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -228,8 +265,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="house" catalog="system" width="128" height="106"/>
         <image name="list.dash" catalog="system" width="128" height="85"/>
-        <image name="trash" catalog="system" width="121" height="128"/>
         <image name="tray" catalog="system" width="128" height="88"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -239,9 +276,6 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
