--- a/storeKeeperV2.0/Base.lproj/Main.storyboard
+++ b/storeKeeperV2.0/Base.lproj/Main.storyboard
@@ -9,35 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="9mG-te-wvH">
-            <objects>
-                <viewController id="gOK-sM-BWb" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lLj-OJ-HKI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aI4-1O-dfK">
-                                <rect key="frame" x="87" y="176" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Отвертка" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IA-f6-XSK">
-                                <rect key="frame" x="154" y="333" width="107" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="ipB-D1-Nvz"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="T7S-py-ip1"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vb6-Pt-Iaq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1542" y="-595"/>
-        </scene>
         <!--Мой Склад-->
         <scene sceneID="XBU-zB-3Jq">
             <objects>
@@ -70,9 +41,6 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="gOK-sM-BWb" kind="show" trigger="accessoryAction" id="sJo-Ok-GXp"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -110,14 +78,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="hKa-DY-SIQ">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellManage" rowHeight="150" id="3v4-1h-00Y" customClass="ManageTableViewCell" customModule="storeKeeperV2_0" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="72" width="414" height="150"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3v4-1h-00Y" id="u0w-f5-vdK">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
@@ -211,7 +174,7 @@
                             <outlet property="delegate" destination="elJ-jh-bzS" id="1rr-ce-qEG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Управление Складом" largeTitleDisplayMode="never" id="xCE-67-uXe">
+                    <navigationItem key="navigationItem" title="Управление Складом" id="xCE-67-uXe">
                         <barButtonItem key="backBarButtonItem" title="Склад" id="cwl-Bc-CQ4"/>
                         <rightBarButtonItems>
                             <barButtonItem systemItem="add" id="FDz-Ae-zI1">
@@ -232,20 +195,110 @@
             </objects>
             <point key="canvasLocation" x="1577" y="112"/>
         </scene>
-        <!--View Controller-->
+        <!--Add New View Controller-->
         <scene sceneID="D23-4j-6T6">
             <objects>
-                <viewController id="r0O-2H-NJI" sceneMemberID="viewController">
+                <viewController id="r0O-2H-NJI" customClass="AddNewViewController" customModule="storeKeeperV2_0" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R8j-mX-g00">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="gOu-9y-cIE">
+                                <rect key="frame" x="8" y="114" width="398" height="342"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Добавить новый товар" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azT-mr-9FK">
+                                        <rect key="frame" x="0.0" y="0.0" width="398" height="39.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Наименование*" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yOT-zu-Dvp">
+                                        <rect key="frame" x="0.0" y="60.5" width="398" height="39.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8et-Cb-d8j">
+                                        <rect key="frame" x="0.0" y="121" width="398" height="39.5"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Количество*" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1ks-Ma-1AE">
+                                                <rect key="frame" x="0.0" y="0.0" width="296" height="39.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                <connections>
+                                                    <action selector="countTextFieldAction:" destination="r0O-2H-NJI" eventType="editingDidEnd" id="0NQ-0B-oRj"/>
+                                                    <action selector="countTextFieldAction:" destination="r0O-2H-NJI" eventType="editingChanged" id="6O8-6e-l5F"/>
+                                                </connections>
+                                            </textField>
+                                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="HOE-Dd-qUK">
+                                                <rect key="frame" x="304" y="0.0" width="94" height="39.5"/>
+                                                <connections>
+                                                    <action selector="stepperAction:" destination="r0O-2H-NJI" eventType="valueChanged" id="EjY-3S-H6d"/>
+                                                </connections>
+                                            </stepper>
+                                        </subviews>
+                                    </stackView>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="eIg-3B-LCy">
+                                        <rect key="frame" x="0.0" y="181.5" width="398" height="40.5"/>
+                                        <segments>
+                                            <segment title="1"/>
+                                            <segment title="2"/>
+                                            <segment title="3"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="segmentedChanged:" destination="r0O-2H-NJI" eventType="valueChanged" id="DaK-SK-FQM"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Описание" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KXI-Zz-5vf">
+                                        <rect key="frame" x="0.0" y="242" width="398" height="39.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="ZdC-9J-8MO">
+                                        <rect key="frame" x="0.0" y="302.5" width="398" height="39.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8XV-PB-7NL">
+                                                <rect key="frame" x="0.0" y="0.0" width="175" height="39.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <state key="normal" title="Отменить"/>
+                                                <connections>
+                                                    <action selector="cancelButtonPressed:" destination="r0O-2H-NJI" eventType="touchUpInside" id="DOC-Ck-xVN"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t7E-E4-dey">
+                                                <rect key="frame" x="196" y="0.0" width="202" height="39.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <state key="normal" title="Сохранить">
+                                                    <color key="titleColor" systemColor="systemRedColor"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="saveButtonPressed" destination="r0O-2H-NJI" eventType="touchUpInside" id="V6X-Bn-7EA"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="oCD-mG-4ro"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gOu-9y-cIE" firstAttribute="leading" secondItem="oCD-mG-4ro" secondAttribute="leading" constant="8" id="0HD-lD-FT5"/>
+                            <constraint firstItem="oCD-mG-4ro" firstAttribute="trailing" secondItem="gOu-9y-cIE" secondAttribute="trailing" constant="8" id="Gar-3C-6BF"/>
+                            <constraint firstItem="gOu-9y-cIE" firstAttribute="centerY" secondItem="R8j-mX-g00" secondAttribute="centerY" constant="-163" id="VWd-zA-URF"/>
+                            <constraint firstItem="gOu-9y-cIE" firstAttribute="top" secondItem="oCD-mG-4ro" secondAttribute="top" constant="70" id="quN-Wo-czo"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="countTextField" destination="1ks-Ma-1AE" id="Nig-rM-3Eh"/>
+                        <outlet property="descriptionTextField" destination="KXI-Zz-5vf" id="bGH-Jb-avK"/>
+                        <outlet property="stepperOutlet" destination="HOE-Dd-qUK" id="Xd4-Rx-baq"/>
+                        <outlet property="titleTextField" destination="yOT-zu-Dvp" id="7jc-MW-2WM"/>
+                        <outlet property="typeSwitcher" destination="eIg-3B-LCy" id="pVa-in-9ec"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rrJ-4B-hxi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2403" y="112"/>
+            <point key="canvasLocation" x="2402.898550724638" y="111.83035714285714"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="nPQ-EI-iqz">
@@ -276,6 +329,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
